--- a/ms.bib
+++ b/ms.bib
@@ -913,3 +913,19 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/1955ApJ...121..161S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@ARTICLE{Bruzual2003,
+   author = {{Bruzual}, G. and {Charlot}, S.},
+    title = "{Stellar population synthesis at the resolution of 2003}",
+  journal = {\mnras},
+   eprint = {astro-ph/0309134},
+ keywords = {stars: evolution, galaxies: evolution, galaxies: formation, galaxies: stellar content},
+     year = 2003,
+    month = oct,
+   volume = 344,
+    pages = {1000-1028},
+      doi = {10.1046/j.1365-8711.2003.06897.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2003MNRAS.344.1000B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
