--- a/mg14proc.tex
+++ b/mg14proc.tex
@@ -114,6 +114,9 @@ $^*$E-mail: rafael\_kueng@uzh.ch
   2 Rue de la Piquetterie, 91680 Bruyeres-le-Chatel, France
 }
 
+\author{Ignacio Ferreras}
+\address{Mullard Space Science Laboratory, University College London, Holmbury St Mary, Dorking, Surrey RH5 6NT, UK}
+
 \author{
   Phil Marshall
 }
@@ -248,7 +251,7 @@ We estimated the stellar mass with:
 \]
 where
 $z_\text{ph}$ and $m_\text{i}$ are the photometric redshift and luminosity given in \icite{sw2} and 
-$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift provided by I. Ferreras, which is based on the BC03 models (\icite{Bruzual2003}), Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).
+$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift BC03 models (\icite{Bruzual2003}), Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).
 For the lower bound of the error we assumed a young population (0.5 Gyr), whereas for the upper one of 2 Gyr.
 
 
@@ -269,7 +272,6 @@ We identify outliers with very low stellar masses that need further inspection.
 
 \section*{Acknowledgments}
 RK thanks the Candoc Grant (UZH Forschungskredit) for their support of this work.
-Addidionally we thank Ignacio Ferreras for the stellar mass tables.
 
 \bibliographystyle{ws-procs975x65}
 \bibliography{ms}
