working on intro

--- a/ms.bib
+++ b/ms.bib
@@ -215,7 +215,7 @@
 	and formalize effective new strategies and algorithms.}
 }
 
-@ARTICLE{2009ApJ...703L..51K,
+@ARTICLE{Koopans2009,
   author = {{Koopmans}, L.~V.~E. and {Bolton}, A. and {Treu}, T. and {Czoske},
 	O. and {Auger}, M.~W. and {Barnab{\`e}}, M. and {Vegetti}, S. and
 	{Gavazzi}, R. and {Moustakas}, L.~A. and {Burles}, S.},
@@ -235,9 +235,8 @@
   primaryclass = {astro-ph.CO}
 }
 
-@ARTICLE{2011ApJ...740...97L,
-  author = {{Leier}, D. and {Ferreras}, I. and {Saha}, P. and {Falco}, E.~E.
-	},
+@ARTICLE{Leier2011,
+  author = {{Leier}, D. and {Ferreras}, I. and {Saha}, P. and {Falco}, E.~E.},
   title = {{Resolving the Baryon-fraction Profile in Lensing Galaxies}},
   journal = {\apj},
   year = {2011},
@@ -399,7 +398,7 @@
   primaryclass = {astro-ph.CO}
 }
 
-@ARTICLE{2014MNRAS.437..600S,
+@ARTICLE{Sereno2014,
    author = {{Sereno}, M. and {Paraficz}, D.},
     title = "{Hubble constant and dark energy inferred from free-form determined time delay distances}",
   journal = {\mnras},
@@ -927,5 +926,24 @@ archivePrefix = "arXiv",
     pages = {1000-1028},
       doi = {10.1046/j.1365-8711.2003.06897.x},
    adsurl = {http://adsabs.harvard.edu/abs/2003MNRAS.344.1000B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Ferreras2010,
+   author = {{Ferreras}, I. and {Saha}, P. and {Leier}, D. and {Courbin}, F. and 
+	{Falco}, E.~E.},
+    title = "{Constraining the low-mass end of the initial mass function with gravitational lensing}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1008.4363},
+ keywords = {gravitational lensing: strong, stars: luminosity function, mass function, galaxies: individual: 2237+0305, galaxies: stellar content},
+     year = 2010,
+    month = nov,
+   volume = 409,
+    pages = {L30-L34},
+      doi = {10.1111/j.1745-3933.2010.00941.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2010MNRAS.409L..30F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
