--- a/mg14proc.tex
+++ b/mg14proc.tex
@@ -182,6 +182,23 @@ presented.
 
 \section{Introduction}
 
+Gravitational lenses (GL), prediced by A. Einstein's General Relativity in 1915 have become an important tool in cosmology.
+Strong lensing can be used to infer the distribution of dark matter around galaxies (e.g. \icite{Koopans2009}), to find the relation between stars and dark matter (\icite{Leier2011}) or to infer cosmological parameters (\icite{Sereno2014}).
+
+Current surveys resulted in a few hundred of known lenses.
+For example in the Space Warps project (\icite{sw1,sw2}), carried out on the 170 square degree Canada--France--Hawaii Telescope Legacy Survey (CFHTLS), over 30'000 volunteers found 59 candidate lenses.
+As a rough estimate, this is one lens every few square degree.
+
+Imaging surveys under way will increase the observation area by a factor of ten and next gen surveys starting in the twenty-twenties will increase the resolution by another factor of ten.\scite{Marshall2005,OguriMarshall2010}
+This raises expectations that the number of lenses will increase a hundred fold, leading to an order of 10'000 lenses over the next 10 years.
+Thats of order one possible lens detection per hour.
+
+
+
+
+
+
+
 \begin{itemize}
   \item NOW:
   \item CHFT LS: 150 deg$^2$
@@ -251,7 +268,7 @@ We estimated the stellar mass with:
 \]
 where
 $z_\text{ph}$ and $m_\text{i}$ are the photometric redshift and luminosity given in \icite{sw2} and 
-$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift BC03 models (\icite{Bruzual2003}), Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).
+$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift BC03 models (\icite{Bruzual2003}), Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).\scite{Ferreras2010}
 For the lower bound of the error we assumed a young population (0.5 Gyr), whereas for the upper one of 2 Gyr.
 
 
